<resources>
    <string name="app_name">Smart Estate</string>
    <string name="email">Email</string>
    <string name="emailExample">example@email.com</string>
    <string name="blockNumber">BlockNumber</string>
    <string name="blockExample">Block number</string>
    <string name="house">House Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="donotHaveAnAccount">Don\'t have an account?Register</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="nameOfEstate">Name of Estate</string>
    <string name="welcome">Welcome to smart estate</string>
    <string name="firstName">First name</string>
    <string name="surname">surname</string>
    <string name="estateName">Name of your estate</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="phone">phoneNumber</string>
    <string name="register">Register</string>
    <string name="alreadyHaveAnAccount">Already Have An Account? Login</string>
    <string name="paymentStatement">Payment statement</string>
    <string name="statement">Mini statement</string>
    <string name="statementDescription">Payments you have made</string>
    <string name="payment">Make payment</string>
    <string name="paymentDescription">Pay rent or service charge</string>
    <string name="messaging">Send message</string>
    <string name="message">Send a message</string>
    <string name="services">Services</string>
    <string name="service">Request for a service</string>
    <string name="icon">icon</string>
    <string name="heading">HEADING</string>
    <string name="Description">Description of the app</string>
    <string name="smartEstate">Smart Estate</string>
    <string name="firstDescription">Kenya\'s first Property Management app</string>
    <string name="btnNext1">Next</string>
    <string name="dots">Navigation dots</string>
    <string name="title">You are a?</string>
    <string name="landlord">I am a Landlord</string>
    <string name="tenant">I am a tenant</string>
    <string name="manage">You manage?</string>
    <string name="rentals">Rentals</string>
    <string name="studentAccommodation">Student Accommodation</string>
    <string name="title_here">title here</string>
    <string name="Landlord">Landlord</string>
    <string name="Tenant">Tenant</string>
    <string name="join">Join the digital wave</string>
    <string name="navigation">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Your Name</string>
    <string name="rentBalance">Ksh 0.00</string>
    <string name="rent">Rent Balance</string>
    <string name="serviceCharge">Service Charge Balance</string>
    <string name="loan">Loan Balance</string>
    <string name="payRent">PayRent</string>
    <string name="pay_rent">Pay Rent</string>
    <string name="payServiceCharge">Pay Service Charge</string>
    <string name="takeLoan">Take a loan</string>
    <string name="hello">Hello there..</string>
    <string name="received">You have received 0 payments</string>
    <string name="expensesBalance">Total expenses balance</string>
    <string name="cancel">Cancel</string>
    <string name="terms">Terms and conditions</string>
    <string name="SmartTerms">
         By registering you agree to Smart Estate deducting 3% of all transactions to carter for operational costs
    </string>
    <string name="agree">Agree</string>
    <string name="decline">Decline</string>
    <string name="rentMoney">Rent Money</string>
    <string name="collection">Total Rent Income</string>
    <string name="Rent">Rent</string>
    <string name="occupancy">Occupancy</string>
    <string name="expenses">Expenses</string>
    <string name="addBuilding">add building</string>
    <string name="propety">Building Name</string>
    <string name="totalRent">Total rent</string>
    <string name="totalDue">Total due :</string>
    <string name="nameOfBuilding">Building Name</string>
    <string name="ownership">Name of the building you own</string>
    <string name="EstateName">Name of estate</string>
    <string name="building">Name of building</string>
    <string name="capacity">Capacity</string>
    <string name="eName">Estate Name</string>
    <string name="estateImage">Image of that building</string>
    <string name="imageOfTheBuilding">Building Image</string>
    <string name="upload">Upload picture</string>
    <string name="takePhoto">Take photo</string>
    <string name="occupied">Occupied</string>
    <string name="amountOccupied">0</string>
    <string name="vacant">Vacant</string>
    <string name="SetRoomPrices">Set Room prices</string>
    <string name="room">Room</string>
    <string name="prices">Room prices</string>
    <string name="amount">rent in Ksh</string>
    <string name="setPrice">Set Price</string>
    <string name="electricity">TODO</string>
    <string name="accountNumber">Account Number</string>
    <string name="paybillNumber">Paybill Number</string>
    <string name="submit">Submit</string>
    <string name="balance">Total rent balance</string>
    <string name="loading">Loading...</string>
    <string name="houseNumber">house number</string>
    <string name="tenantImage">Tenant image</string>
    <string name="tenantName">Name of tenant</string>
    <string name="addTenant">add Tenant</string>
    <string name="nameOfTenant">Name of tenant</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="tenants">Tenant</string>
    <string name="buildings">Buildings</string>
    <string name="number">0</string>
    <string name="block">A-1</string>
    <string name="smartestate">Smart Estate</string>
    <string name="txttoSignUp">Do not have an account ? sign up</string>
</resources>
