<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationActivity">
    <View
        android:id="@+id/topYellowView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/yellow"
        android:focusable="true"/>
    <View
        android:id="@+id/yellowWave"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/topYellowView"
        android:background="@drawable/yellow_wave"
        android:focusable="true"/>

    <RelativeLayout
        android:id="@+id/logoShaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="20dp"
                android:layout_margin="10dp">
                <ImageView
                    android:id="@+id/iconEstate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/smart1"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/nameOfEstate"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    />

            </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoShaper"
        android:text="@string/welcome"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/backgroundColor"/>
    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yellowWave"
        android:padding="15dp"
        android:hint="@string/surname"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/round_border_yellow"
        android:drawableStart="@drawable/account_image"
        android:autofillHints="@string/surname"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/estate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surname"
        android:background="@drawable/round_border_yellow"
        android:padding="15dp"
        android:hint="@string/estateName"
        android:gravity="center"
        android:drawableStart="@drawable/estate_yellow"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:focusable="true"
        android:autofillHints="@string/nameOfEstate"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_yellow"
        android:layout_below="@+id/estate"
        android:hint="@string/email"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/mail"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/emailExample" />
    <EditText
       android:id="@+id/phoneNumber"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/email"
       android:padding="16dp"
       android:background="@drawable/round_border_yellow"
       android:hint="@string/phone"
       android:gravity="center"
       android:autofillHints="@string/phone"
       android:inputType="phone"
       android:drawableStart="@drawable/yellow_phone"
       android:layout_marginBottom="10dp"
       />
    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumber"
        android:background="@drawable/round_border_yellow"
        android:padding="15dp"
        android:hint="@string/password"
        android:gravity="center"
        android:drawableStart="@drawable/yellow_lock"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:background="@drawable/round_border_yellow"
        android:padding="15dp"
        android:hint="@string/confirmPassword"
        android:gravity="center"
        android:drawableStart="@drawable/yellow_lock"
        android:inputType="textPassword"
        android:autofillHints="@string/confirmPassword"/>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/confirmation"
        android:background="@drawable/round_background_yellow"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:textColor="@color/backgroundColor"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:layout_below="@id/buttonRegister"
        android:text="@string/alreadyHaveAnAccount"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="italic"/>






</RelativeLayout>