<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginActivity">
    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/oceanBlue"
        />
    <View
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        android:layout_below="@+id/topView"/>
    <RelativeLayout
        android:id="@+id/logo_shaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/iconEstate"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/smart1"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/nameOfEstate"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/logo_shaper"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/backgroundColor"/>
    <EditText
        android:id="@+id/estateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wave"
        android:hint="@string/nameOfEstate"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:drawableStart="@drawable/block_number"
        android:inputType="text"
        android:autofillHints="@string/nameOfEstate"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:padding="16dp"
        />
    <EditText
        android:id="@+id/Block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/estateName"
        android:hint="@string/blockNumber"
        android:gravity="center"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:autofillHints="@string/blockExample"
        android:background="@drawable/round_border"
        android:padding="16dp"/>
    <EditText
        android:id="@+id/houseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Block"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:padding="16dp"
        android:hint="@string/house"
        android:gravity="center"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:inputType="number"
        android:autofillHints="@string/house"
        android:drawablePadding="16dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/houseNumber"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:hint="@string/password"
        android:gravity="center"
        android:drawableStart="@drawable/password"
        android:layout_margin="10dp"
        android:autofillHints="@string/password"
        android:inputType="textPassword"/>
   <Button
       android:id="@+id/login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:padding="20dp"
       android:width="300dp"
       android:layout_below="@+id/password"
       android:layout_centerInParent="true"
       android:text="@string/login"
       android:background="@drawable/round_background"
       android:textStyle="bold"
       android:textColor="@color/backgroundColor"
       android:clickable="true"
       android:focusable="true" />
    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="@string/donotHaveAnAccount"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:textColor="@color/oceanBlue"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration"
        android:text="@string/forgotPassword"
        android:layout_centerInParent="true"
        android:textColor="@color/oceanBlue"
        android:textStyle="bold"
        android:textSize="18sp"/>






</RelativeLayout>