<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout">
    <ImageView
        android:id="@+id/slideImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slideImg"
        android:gravity="center"
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:text="@string/title_here"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/txtTitle"
        android:layout_margin="20dp"
        android:padding="40dp"
        android:textColor="#FFF"
        android:text="@string/Description"
        android:textSize="17sp"
        android:textAlignment="center"/>



</RelativeLayout>