<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/oceanBlue"
            app:cardCornerRadius="30dp"
            app:cardElevation="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cancel"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/addBuilding" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/imageOfTheBuilding"
                                android:textSize="16sp"
                                android:textColor="@color/backgroundColor"
                                android:layout_margin="5dp"
                                />
                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                app:cardCornerRadius="50dp"
                                app:cardElevation="20dp"
                                android:layout_margin="5dp">
                                    <ImageView
                                        android:id="@+id/imageOfEstate"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:src="@drawable/ic_home_black_24dp"
                                        android:contentDescription="@string/estateImage"/>
                            </androidx.cardview.widget.CardView>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="16dp"
                                android:orientation="horizontal"
                                android:gravity="center">
                                <Button
                                    android:id="@+id/uploadPicture"
                                    android:layout_width="100dp"
                                    android:layout_height="50dp"
                                    android:background="@drawable/white_edit_text"
                                    android:text="@string/upload"
                                    android:textAllCaps="false"/>
                                <ImageButton
                                    android:id="@+id/takePicture"
                                    android:layout_width="100dp"
                                    android:layout_height="50dp"
                                    android:background="@drawable/white_edit_text"
                                    android:layout_margin="5dp"
                                    android:src="@drawable/camera"
                                    android:contentDescription="@string/takePhoto"/>



                                    
                            </LinearLayout>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/EstateName"
                           android:textColor="@color/backgroundColor"
                           android:textSize="16sp"
                           />
                    
                            <EditText
                                android:id="@+id/nameEstate"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/white_edit_text"
                                android:hint="@string/nameOfEstate"
                                android:gravity="center"
                                android:drawableStart="@drawable/block_number"
                                android:layout_margin="10dp"
                                android:autofillHints="@string/nameOfEstate"
                                android:inputType="text" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/building"
                            android:textColor="@color/backgroundColor"
                            android:textSize="16sp"/>
                            <EditText
                                android:id="@+id/nameBuilding"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/white_edit_text"
                                android:hint="@string/nameOfBuilding"
                                android:gravity="center"
                                android:layout_margin="10dp"
                                android:drawableStart="@drawable/ic_home_black_24dp"
                                android:inputType="text"
                                android:autofillHints="@string/nameOfBuilding"
                                />
                            <!--Here we will install the unit price picker -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/backgroundColor"
                            android:textSize="16sp"
                            android:text="@string/capacity"/>
                              <NumberPicker
                                  android:id="@+id/capacityPicker"
                                  android:layout_width="wrap_content"
                                  android:layout_height="80dp"
                                  android:background="@color/backgroundColor"
                                  android:layout_margin="10dp"
                                  android:theme="@style/NumberPickerTheme"/>
                        <Button
                            android:id="@+id/newBuilding"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:text="@string/addBuilding"
                            android:textColor="@color/backgroundColor"
                            android:background="@drawable/background_yellow"
                            android:layout_margin="20dp"/>




                </LinearLayout>

        </androidx.cardview.widget.CardView>


</RelativeLayout>