<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    android:layout_margin="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tenantImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />



            <TextView
                android:id="@+id/buildingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenantName"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/tenantImage"
                />
            <TextView
                android:id="@+id/rentTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blockNumber"
                android:layout_below="@+id/buildingName"
                android:textStyle="bold"
                android:layout_toEndOf="@id/tenantImage"
                android:textColor="#000000"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/totalDue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/rentTotal"
                android:layout_below="@+id/buildingName"
                android:text="@string/houseNumber"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/EstateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eName"
                android:layout_toEndOf="@+id/buildingName"
                android:layout_marginStart="50dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"/>


    </RelativeLayout>



</androidx.cardview.widget.CardView>